traefik/traefik.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-controller
        name: traefik-ingress-controller
    spec:
      terminationGracePeriodSeconds: 60
      # serviceAccountName: traefik-sa
      containers:
      #- image: k8s-registry.zeusis.com:32000/traefik:v1.1.2-alpine
      - image: k8s-registry.zeusis.com:32000/traefik:v1.2.0-rc2-alpine
        name: traefik-ingress-controller
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8081
        args:
        - -d
        - --web
        - --web.address=:8081
        - --kubernetes
        - --kubernetes.endpoint=http://139.199.73.164:6550/
        - --loglevel=info
        volumeMounts:
        - name: kubernetes-token
          mountPath: /var/run/secrets/kubernetes.io/serviceaccount/
          readOnly: true
      volumes:
      - name: kubernetes-token
        secret:
          secretName: default-token-hck7v
          items:
          - key: ca.crt
            path: ca.crt
          - key: token
            path: token
