traefik/traefik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    nodePort: 80
  selector:
    k8s-app: traefik-ingress-controller
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ui
  namespace: kube-system
spec:
  ports:
  - name: web
    port: 80
    targetPort: 8081
  selector:
    k8s-app: traefik-ingress-controller
