traefik/ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: k8s-ingress-t.zeusis.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ui
          servicePort: 80
